// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldWithValidation when rendering message as text with no error message passed should simply render the child as it is 1`] = `
<div>
  <input
    class="Input Input--size_medium"
    data-lpignore="true"
    id=":r0:"
    type="text"
    value=""
  />
</div>
`;

exports[`FieldWithValidation when using tooltip when error message is defined should remove the message when field is blurred 1`] = `
<div>
  <input
    aria-invalid="true"
    class="Input Input--context_critical Input--size_medium"
    data-lpignore="true"
    id=":r6:"
    type="text"
    value=""
  />
  <p
    class="Text--context_critical Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</div>
`;

exports[`FieldWithValidation when using tooltip when error message is defined should render the message when field is focused 1`] = `
<div>
  <input
    aria-invalid="true"
    class="Input Input--context_critical Input--size_medium"
    data-lpignore="true"
    id=":r5:"
    type="text"
    value=""
  />
  <p
    class="Text--context_critical Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</div>
`;

exports[`FieldWithValidation when using tooltip when error message is defined should set context to bad on child 1`] = `
<div>
  <input
    aria-invalid="true"
    class="Input Input--context_critical Input--size_medium"
    data-lpignore="true"
    id=":r4:"
    type="text"
    value=""
  />
  <p
    class="Text--context_critical Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</div>
`;

exports[`FieldWithValidation when using tooltip with no error message passed should not render a tooltip with no error message 1`] = `
<div>
  <input
    class="Input Input--size_medium"
    data-lpignore="true"
    id=":r3:"
    type="text"
    value=""
  />
</div>
`;

exports[`FieldWithValidation with error message passed should render the message as text 1`] = `
<div>
  <input
    aria-invalid="true"
    class="Input Input--context_critical Input--size_medium"
    data-lpignore="true"
    id=":r2:"
    type="text"
    value=""
  />
  <p
    class="Text--context_critical Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</div>
`;

exports[`FieldWithValidation with error message passed should set context to bad on child 1`] = `
<div>
  <input
    aria-invalid="true"
    class="Input Input--context_critical Input--size_medium"
    data-lpignore="true"
    id=":r1:"
    type="text"
    value=""
  />
  <p
    class="Text--context_critical Text--size_small FieldWithValidation"
  >
    invalid field
  </p>
</div>
`;
